# optics

./: .gitignore  CMakeLists.txt  CMakePresets.json  input_window.cpp  input_window.h  lens.cpp  lens.h  lens_painter.cpp  lens_painter.h  main.cpp  paraxial_characteristics.h  ray.cpp  ray.h  zip.sh
src/: CMakeLists.txt  float.cpp  float.h  input_window.cpp  input_window.h  lens.cpp  lens.h  lens_painter.cpp  lens_painter.h  matrix_operations.cpp  matrix_operations.h  output_window.cpp  output_window.h  paraxial_characteristics.h  ray.h
tests/: CMakeLists.txt  test_paraxial_characteristics.cpp
